auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "828731b7",
+   "id": "51344e62",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0943a66",
+   "id": "cad8ed5c",
    "metadata": {},
    "source": [
     "# About\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc06ca3",
+   "id": "113466d7",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f96a64",
+   "id": "a951ff6d",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b84d5fc",
+   "id": "91a12f68",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b99e13",
+   "id": "906dd539",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -154,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1764546698.629449,
+  "date": 1764556257.1186507,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
