--- a/ifp_dl.ipynb
+++ b/ifp_dl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "386222e9",
+   "id": "08c1248a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d207a63b",
+   "id": "d871c7bb",
    "metadata": {},
    "source": [
     "# Policy Gradient-Based Optimal Savings"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a86a62a",
+   "id": "d5a7f9a4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44da2600",
+   "id": "bbaced01",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a9bd45",
+   "id": "083cee2a",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e1facc2",
+   "id": "cc80e6e0",
    "metadata": {},
    "source": [
     "We’ll use the following imports"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155cb194",
+   "id": "e9f91ccd",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c1cade",
+   "id": "c1c2138e",
    "metadata": {},
    "source": [
     "## Theory\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9220d2d",
+   "id": "c21831e8",
    "metadata": {},
    "source": [
     "### Household problem\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988f9e60",
+   "id": "8e83b703",
    "metadata": {},
    "source": [
     "### Lifetime Value and Optimization\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4864b7da",
+   "id": "dfdae5eb",
    "metadata": {},
    "source": [
     "### The policy gradient approach\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8082a79c",
+   "id": "72710001",
    "metadata": {},
    "source": [
     "## Network\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09bef167",
+   "id": "c170884a",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11d2f09",
+   "id": "b6a15f87",
    "metadata": {},
    "source": [
     "We use a class called `LayerParams` to store parameters representing a single\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06cca62",
+   "id": "35f9ec5b",
    "metadata": {
     "hide-output": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06bd927",
+   "id": "ccf7d20b",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using Le Cun\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f5d3aa",
+   "id": "71af39df",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de50d755",
+   "id": "8bfccc8a",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc272b56",
+   "id": "d55877c8",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecf59df7",
+   "id": "56f5e5e6",
    "metadata": {},
    "source": [
     "Here’s a function to train the network by gradient ascent, given a generic loss\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17ba0697",
+   "id": "9c92034e",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "182c14ee",
+   "id": "39840846",
    "metadata": {},
    "source": [
     "## Cake Eating Case\n",
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057240b0",
+   "id": "60279c21",
    "metadata": {},
    "source": [
     "### Cake eating loss function\n",
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43024a2f",
+   "id": "1781bd02",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a7201f3",
+   "id": "ddcddc9a",
    "metadata": {},
    "source": [
     "We use CRRA utility."
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ada2321",
+   "id": "aa322836",
    "metadata": {
     "hide-output": false
    },
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "956dd2b7",
+   "id": "2e2b0960",
    "metadata": {},
    "source": [
     "Now we provide a function that implements a consumption policy as a neural network, given the\n",
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df76bcec",
+   "id": "ac0e9769",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a517043",
+   "id": "ec8b9593",
    "metadata": {},
    "source": [
     "The next function approximates lifetime value for the cake eating agent\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42d14499",
+   "id": "59ef9e48",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b631ecad",
+   "id": "2e51834f",
    "metadata": {},
    "source": [
     "Here’s the loss function we will minimize."
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017f2c4f",
+   "id": "65c9ff33",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07fbb625",
+   "id": "a38147dc",
    "metadata": {},
    "source": [
     "### Train and solve\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0382496a",
+   "id": "07ce6477",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e96cf80",
+   "id": "09751c2b",
    "metadata": {},
    "source": [
     "We test stability."
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e52d5a",
+   "id": "d2ae5673",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e188e466",
+   "id": "87780933",
    "metadata": {},
    "source": [
     "We compute the optimal consumption rate and lifetime value from the analytical\n",
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92373935",
+   "id": "1142e7c1",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbe684a",
+   "id": "99de3045",
    "metadata": {},
    "source": [
     "Now let’s train the network."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2110dc3c",
+   "id": "8161f574",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3db37de",
+   "id": "b989bfae",
    "metadata": {},
    "source": [
     "First we plot the evolution of lifetime value over the epochs."
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d3a85c8",
+   "id": "d2cf2305",
    "metadata": {
     "hide-output": false
    },
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfb610c",
+   "id": "a200de2b",
    "metadata": {},
    "source": [
     "Next we compare the learned and optimal policies."
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d12baf6",
+   "id": "20c2a40c",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e3c800",
+   "id": "5b8a8cba",
    "metadata": {},
    "source": [
     "### Simulation\n",
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407db047",
+   "id": "a730111c",
    "metadata": {
     "hide-output": false
    },
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bde463f",
+   "id": "5729a74e",
    "metadata": {},
    "source": [
     "Let’s simulate and plot path"
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82465b5",
+   "id": "9b427532",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe3fa8c",
+   "id": "c4466cbe",
    "metadata": {},
    "source": [
     "## IFP Model\n",
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e24355e",
+   "id": "744e191a",
    "metadata": {},
    "source": [
     "### JAX Implementation\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc771d7",
+   "id": "e0328c5d",
    "metadata": {
     "hide-output": false
    },
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39383d8c",
+   "id": "25420c59",
    "metadata": {},
    "source": [
     "### Solving the IID model using the EGM\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "533db853",
+   "id": "0cdb54e1",
    "metadata": {
     "hide-output": false
    },
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c2f9f5c",
+   "id": "8445ad9d",
    "metadata": {},
    "source": [
     "Here’s the solver using time iteration:"
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5952a6",
+   "id": "7a18745c",
    "metadata": {
     "hide-output": false
    },
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394573b9",
+   "id": "18fc5999",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the optimal policy:"
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f43e53",
+   "id": "b9a41170",
    "metadata": {
     "hide-output": false
    },
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9a2a614",
+   "id": "beb9ad73",
    "metadata": {},
    "source": [
     "Plot the optimal consumption policy:"
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12874b0b",
+   "id": "1ec6cd83",
    "metadata": {
     "hide-output": false
    },
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa41b004",
+   "id": "c7879e2a",
    "metadata": {},
    "source": [
     "### Solving the IID model with DL\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d8adf8",
+   "id": "2e4105b8",
    "metadata": {
     "hide-output": false
    },
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113e836a",
+   "id": "cdbd9ce2",
    "metadata": {},
    "source": [
     "The loss function is the negation of the expected lifetime value."
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "293e8e45",
+   "id": "cebea48a",
    "metadata": {
     "hide-output": false
    },
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "747c86d3",
+   "id": "d880752a",
    "metadata": {},
    "source": [
     "Now let’s set up and train the network.\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429eb4e4",
+   "id": "434329f0",
    "metadata": {
     "hide-output": false
    },
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b0e0a3",
+   "id": "558ca4b1",
    "metadata": {},
    "source": [
     "Plot the learning progress."
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89523c27",
+   "id": "b2b71090",
    "metadata": {
     "hide-output": false
    },
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce9641db",
+   "id": "5dfa7cfb",
    "metadata": {},
    "source": [
     "Compare EGM and DL solutions."
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470f4f20",
+   "id": "76b54b9b",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "001da808",
+   "id": "ad7f14b3",
    "metadata": {},
    "source": [
     "The fit is quite good."
@@ -1376,7 +1376,7 @@
   }
  ],
  "metadata": {
-  "date": 1764546698.915842,
+  "date": 1764556257.4056442,
   "filename": "ifp_dl.md",
   "kernelspec": {
    "display_name": "Python",
