--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a6b1baa",
+   "id": "11b07d13",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfbfb8ad",
+   "id": "4bc97929",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "130b49e6",
+   "id": "4885b106",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7085ac",
+   "id": "422d8bf3",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30341d22",
+   "id": "4456cdf9",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d3234fe",
+   "id": "8ca3317b",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0721fea",
+   "id": "ab6688ce",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e7e0a3",
+   "id": "8a50c118",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "632eb587",
+   "id": "965e90b4",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b948e077",
+   "id": "fb8f81c7",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e27b2f13",
+   "id": "22ecec9a",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458aa672",
+   "id": "9bdc696a",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7377b162",
+   "id": "e12a1a20",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40cca499",
+   "id": "3e3605ba",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8525f1db",
+   "id": "4b60113a",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa7ae125",
+   "id": "039fe68f",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d80dc7b2",
+   "id": "1513ff4f",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0dec4a",
+   "id": "6544679a",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09c77168",
+   "id": "9fe8ab52",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4afa875",
+   "id": "8da8de71",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087fdf2b",
+   "id": "3add042a",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be57b7f",
+   "id": "adf14adb",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0cf6dcc",
+   "id": "a7c8320c",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6b806c",
+   "id": "f1395b69",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10a9f4f8",
+   "id": "bf3578af",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43bf0f3e",
+   "id": "7737663b",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe898668",
+   "id": "0bb4f6fb",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b3382c",
+   "id": "e7ffd650",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776e5f0b",
+   "id": "92247396",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0aeb5a1",
+   "id": "f8847063",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7d84705",
+   "id": "a36473d7",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeab8c69",
+   "id": "8747b8b0",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17ea5c32",
+   "id": "a0456fc7",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c3399ca",
+   "id": "cc4cc689",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0810ba53",
+   "id": "3d151018",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c252cdd7",
+   "id": "4a6e99f7",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d51332dc",
+   "id": "4277fe8f",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764546699.005724,
+  "date": 1764556257.4958243,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
