--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aca39097",
+   "id": "f379efc5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3b66a56",
+   "id": "ef96d1fc",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790d5bf2",
+   "id": "90b84ff0",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fdf0408",
+   "id": "11e20330",
    "metadata": {
     "hide-output": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0deb8ea",
+   "id": "e9c01839",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879585d2",
+   "id": "0b40011f",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a956d48d",
+   "id": "f039ccab",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77fc1832",
+   "id": "614b2889",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad17ad3",
+   "id": "c27c9a95",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b0df2a6",
+   "id": "b63ab0a1",
    "metadata": {
     "hide-output": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e31cf03",
+   "id": "5231a26c",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f085bf7",
+   "id": "1b0fde6f",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d7af73c",
+   "id": "84a66b1c",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "310bff14",
+   "id": "af6649e8",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cdc5692",
+   "id": "7e80c9c1",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae282d62",
+   "id": "277df882",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f49fed",
+   "id": "b65e4746",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06958cae",
+   "id": "87a1f84b",
    "metadata": {
     "hide-output": false
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca6f7f67",
+   "id": "bf0686a8",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5623f3",
+   "id": "153c26b1",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b16144d6",
+   "id": "bb929c1f",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709ead1f",
+   "id": "c50f71dd",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a89c8f4",
+   "id": "76de3be9",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c94b34",
+   "id": "8af7c56c",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04bf587",
+   "id": "42e7b655",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10bd984c",
+   "id": "a2d092b8",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57c7280d",
+   "id": "401b7eec",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ede595",
+   "id": "cc117d8b",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cbfca39",
+   "id": "01f48bf2",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6ffc6f",
+   "id": "c2001e85",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c6a66d",
+   "id": "4be3f370",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27d170cd",
+   "id": "863566a2",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8edf8a2",
+   "id": "ebfa428a",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36b7682",
+   "id": "3938453e",
    "metadata": {
     "hide-output": false
    },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9ddeb75",
+   "id": "383f1906",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f508e9a5",
+   "id": "51d58ee6",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c814acc",
+   "id": "a6c97039",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58572e54",
+   "id": "260678f4",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a96659",
+   "id": "7834e6f1",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9939496a",
+   "id": "d86ca9d2",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "991554ae",
+   "id": "246c949a",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753b40c7",
+   "id": "d67430d5",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a97dadf",
+   "id": "9d533f34",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3452cd3",
+   "id": "baf27b7e",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459d6bf7",
+   "id": "aa2527e7",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8727bb",
+   "id": "b70acadb",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "279597d1",
+   "id": "91ff4d10",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf7acf5",
+   "id": "d6660046",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb55d33",
+   "id": "acc9208a",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f1d067e",
+   "id": "c512596f",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4ebf58",
+   "id": "dbe0caef",
    "metadata": {
     "hide-output": false
    },
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62d8395",
+   "id": "b74a0d23",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90016f8",
+   "id": "8ce41c3f",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487c251a",
+   "id": "806d595a",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2170180c",
+   "id": "7d9015ac",
    "metadata": {
     "hide-output": false
    },
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ea5fd5",
+   "id": "59cd2c5d",
    "metadata": {
     "hide-output": false
    },
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef5761a1",
+   "id": "3d734e6c",
    "metadata": {
     "hide-output": false
    },
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a6ab64",
+   "id": "667b309e",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6f956e",
+   "id": "9d9a7d08",
    "metadata": {
     "hide-output": false
    },
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93407771",
+   "id": "eb43f22d",
    "metadata": {
     "hide-output": false
    },
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029cbe9b",
+   "id": "6233aa70",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d167b255",
+   "id": "0d56498c",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ce0ed0",
+   "id": "2822c56e",
    "metadata": {
     "hide-output": false
    },
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e7da98d",
+   "id": "c1eb6cf5",
    "metadata": {
     "hide-output": false
    },
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6775ffc9",
+   "id": "e40c8250",
    "metadata": {
     "hide-output": false
    },
@@ -1048,7 +1048,7 @@
   }
  ],
  "metadata": {
-  "date": 1764546699.423348,
+  "date": 1764556257.9151332,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
