--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "054a541e",
+   "id": "98012625",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac9b887",
+   "id": "04c26066",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28db2af",
+   "id": "5ec0f93d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f773e647",
+   "id": "6674d53a",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93302bd8",
+   "id": "37c85341",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f56270bc",
+   "id": "838a5f06",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29ab0636",
+   "id": "0a2d1aeb",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a4f8dd1",
+   "id": "d5808927",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ac498b",
+   "id": "c4d34a8f",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c4b820",
+   "id": "1b13de5f",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54037fd9",
+   "id": "ba5b6832",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0afc0295",
+   "id": "187eb849",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4859ffdd",
+   "id": "dc64551f",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "815d2077",
+   "id": "ebd02ffe",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a79657d7",
+   "id": "dc11b75a",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9ab9546",
+   "id": "9308c92d",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03aff0fb",
+   "id": "5a2138fb",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee0a64e",
+   "id": "c4418872",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac2ee0b",
+   "id": "1e929007",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a72f76",
+   "id": "ed2ab106",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92682374",
+   "id": "15449240",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04843ae3",
+   "id": "810ccaa4",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36aa0c88",
+   "id": "6360f7a2",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0dee946",
+   "id": "2a7ccb87",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ad3e9e6",
+   "id": "9dbd19d9",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7178ec7",
+   "id": "d0ec171e",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b60946",
+   "id": "6f3c0583",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a172f35b",
+   "id": "45521f5c",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78dbb4fd",
+   "id": "1ab87e6b",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9056549",
+   "id": "1b781443",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eab3c66",
+   "id": "9eb51c27",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62836d5b",
+   "id": "1e5ee626",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f5cb27c",
+   "id": "1ab81b73",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2afd02a4",
+   "id": "41785a95",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe0304c",
+   "id": "e99054e4",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "938da9d2",
+   "id": "b65e4bfa",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59c0af34",
+   "id": "bb28d5e6",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da76be0b",
+   "id": "c60b5b04",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f7815a",
+   "id": "a7d7747b",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c4e871",
+   "id": "b6a71d90",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be00f20",
+   "id": "0b7fd5b9",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4586f7de",
+   "id": "3b6b8da3",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8cc5fa3",
+   "id": "ab79349a",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a8981d",
+   "id": "4f0f4ac2",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf3ac25",
+   "id": "9e79cac5",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "768d9d0c",
+   "id": "8e5a20b0",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55f385e",
+   "id": "53fa7a6d",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f98759b",
+   "id": "0576c12c",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "509d57a9",
+   "id": "9af8373a",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5606879",
+   "id": "0835e10a",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa66956d",
+   "id": "df6968fc",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b8dd08",
+   "id": "b7a8ead4",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764546699.155387,
+  "date": 1764556257.6462615,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
